tests/sqlcmd/baselines/errors/remove_classes1.errbaseline
SQL error while compiling query: SQL Syntax error in "REMOVE" unexpected token: REMOVE
